@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-10T08:26:00Z",
-  "count" : 3,
+  "timestamp" : "2022-07-10T16:30:00Z",
+  "count" : 2,
   "count_minmax" : [ 1, 4 ],
-  "count_decinc" : [ -1, +4 ],
+  "count_decinc" : [ -2, +4 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
