@@ -1,5 +1,5 @@
 {
-  "timestamp" : "2022-07-10T08:26:00Z",
+  "timestamp" : "2022-07-10T16:30:00Z",
   "count_outdated" : 657,
   "uniques_outdated" : 341,
   "count" : 689,
@@ -7,7 +7,7 @@
   "clones" : [
     {
       "timestamp": "2022-06-26T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "count_minmax": [ 1, 4 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ]
@@ -105,8 +105,8 @@
     },
     {
       "timestamp": "2022-07-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
