@@ -4,7 +4,7 @@
   "clones": [
     {
       "timestamp": "2022-06-26T00:00:00Z",
-      "count": 3,
+      "count": 2,
       "uniques": 2
     },
     {
@@ -74,7 +74,7 @@
     },
     {
       "timestamp": "2022-07-10T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
