@@ -1,3 +1,10 @@
+2022-07-10T16:30:00Z:
+* notice: last 14d: unq all: 4 32
+* notice: prev accum: outdated-unq outdated-all / unq all: 341 657 / 359 689
+* notice: next accum: outdated-unq outdated-all / unq all: 341 657 / 359 689
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-26 2022-07-10]
+
 2022-07-10T08:26:00Z:
 * notice: last 14d: unq all: 4 32
 * notice: prev accum: outdated-unq outdated-all / unq all: 341 657 / 358 689
